--- a/SAE51-CRM/docker-compose.yaml
+++ b/SAE51-CRM/docker-compose.yaml
@@ -4,9 +4,10 @@ services:
     image: mysql:8.0-debian
     container_name: crm-bdd
     volumes:
-      - ./dolibarrbdd.sql:/docker-entrypoint-initdb.d/mon_fichier.sql
+      - ./dolibarrbdd.sql:/docker-entrypoint-initdb.d/dolibarrbdd.sql
       - db-volume:/var/lib/mysql
-
+      - ./users.csv:/users.csv
+      - ./insertion_data.sh:/insertion_data.sh
     environment:
       MYSQL_ROOT_PASSWORD: 'root'
       MYSQL_DATABASE: 'dolibarrbase'
@@ -18,6 +19,7 @@ services:
     networks:
       network:
         ipv4_address: 172.16.0.3
+
   php-apache:
     build:
       context: .
